buildscript {
//    buildscript中的声明是gradle脚本自身需要使用的资源。可以声明的资源包括依赖项、第三方插件、maven仓库地址等。
    ext {
        kotlin_version = '1.1.51'
        vertx_version = '3.5.4'
        springVersion = '5.1.8.RELEASE'
        scalaVersion = '2.12.7'
    }

    repositories {
        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
        jcenter()
        maven {
            url "https://oss.sonatype.org/content/repositories/snapshots/"
        }
    }

    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
        classpath "io.spring.gradle:dependency-management-plugin:1.0.3.RELEASE"
    }
}
plugins {
    id 'application'
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.3.10'
    id "com.github.ManifestClasspath" version "0.1.0-RELEASE"
    id "org.jetbrains.kotlin.kapt" version "1.3.40"
}
apply plugin: "io.spring.dependency-management"
apply plugin: 'idea'
apply plugin: 'kotlin-kapt'
apply plugin: 'scala'

group 'com.perkins'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
    maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
    mavenCentral()
    jcenter()
    maven {
        url "https://oss.sonatype.org/content/repositories/3963/"
    }
}

dependencies {
    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    compile group: 'junit', name: 'junit', version: '4.12'

    compile "io.vertx:vertx-core:$vertx_version"
    compile "io.vertx:vertx-web:$vertx_version"
    compile "io.vertx:vertx-mongo-client:$vertx_version"
//    compile "io.reactivex.rxjava2:rxjava:$vertx_version"
    compile "io.vertx:vertx-rx-java:$vertx_version"
//    compile "io.vertx:vertx-rx-java:3.7.1"
    compile "io.vertx:vertx-reactive-streams:$vertx_version"
    compile "io.vertx:vertx-auth-common:$vertx_version"
    compile "io.vertx:vertx-auth-jwt:$vertx_version"
    compile "io.vertx:vertx-auth-mongo:$vertx_version"

    compile "io.vertx:vertx-hazelcast:$vertx_version"
    compile "com.hazelcast:hazelcast:3.8.2"
    compile "io.vertx:vertx-mongo-client:$vertx_version"
    compile "io.vertx:vertx-lang-kotlin:$vertx_version"
    compile "io.vertx:vertx-jdbc-client:$vertx_version"
    compile "io.vertx:vertx-mysql-postgresql-client:$vertx_version"
    compile "io.vertx:vertx-service-discovery:$vertx_version"
    compile "io.vertx:vertx-service-discovery-bridge-consul:$vertx_version"
    compile "io.vertx:vertx-service-discovery-bridge-kubernetes:$vertx_version"
    compile "io.vertx:vertx-codegen:$vertx_version"
    kapt "io.vertx:vertx-codegen:$vertx_version:processor"
    compile "io.vertx:vertx-service-proxy:$vertx_version"
    compile "io.vertx:vertx-service-proxy:$vertx_version:processor"







    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
    compile "org.jetbrains.kotlin:kotlin-runtime:$kotlin_version"


//    compile 'software.amazon.awssdk:kinesis'
    compile "software.amazon.awssdk:aws-sdk-java:2.5.54"
    compile "software.amazon.awssdk:s3:2.5.54"
    compile "com.amazonaws:aws-java-sdk-s3:1.11.563"
// https://mvnrepository.com/artifact/net.coobird/thumbnailator
    compile group: 'net.coobird', name: 'thumbnailator', version: '0.4.8'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
    // https://mvnrepository.com/artifact/commons-codec/commons-codec
    compile group: 'commons-codec', name: 'commons-codec', version: '1.12'

    // 使用logback日志文件
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'

    // 获取文件名后缀工具包
    // https://mvnrepository.com/artifact/org.apache.tika/tika-core
    compile group: 'org.apache.tika', name: 'tika-core', version: '1.21'


    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'

    // 整合spring
    compile "org.springframework:spring-core:$springVersion"
    compile "org.springframework:spring-context:$springVersion"

    // 整合
    compile "org.scala-lang:scala-library:$scalaVersion"


    // https://mvnrepository.com/artifact/io.vavr/vavr
    compile group: 'io.vavr', name: 'vavr', version: '0.10.0'
}

dependencyManagement {
    imports {
        mavenBom 'software.amazon.awssdk:bom:2.3.9'
    }
}

compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
}


def mainVerticleName = 'com.perkins.MainVerticle'
mainClassName = 'io.vertx.core.Launcher'

// run 命令需要依赖于application plugin
run {
    args = ['run', mainVerticleName,
            "--launcher-class=$mainClassName",
            "--redeploy=src/**/*.*",
            "--on-redeploy=./gradlew classes"
    ]
}

/**
 停止服务: vertx stop  34133243-5dfa-4ace-9221-02decee7a3ca-redeploy（run时候自动生成的ID）

 */

task annotationProcessing(type: JavaCompile, group: 'build') { // codegen
    source = sourceSets.main.java
    classpath = configurations.compile + configurations.compileOnly
    destinationDir = project.file('src/main/generated')
    options.compilerArgs = [
            "-proc:only",
            "-processor", "io.vertx.codegen.CodeGenProcessor",
            "-Acodegen.output=${project.projectDir}/src/main"
    ]
}

sourceSets {
    main {
        java {
            srcDirs += 'src/main/generated'
        }
    }
}


idea {
    module {
        sourceDirs += file('build/generated/source/kapt/main')
    }
}
